gitops/platform/control-api/orchestrator/redis-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: platform-redis

spec:
  selector:
    app: platform-redis

  ports:
    - name: redis
      port: 6379
      targetPort: redis

  type: ClusterIP
