gitops/platform/control-api/orchestrator/redis-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: platform-redis

spec:
  podSelector:
    matchLabels:
      app: platform-redis

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - deployment-dispatcher
                  - deployment-worker

      ports:
        - protocol: TCP
          port: 6379
